fixed scrolling issue for moz, but now it has scrollbars for image bleeds within overflow parent container

--- a/src/components/inputs/file/images/squared/index.scss
+++ b/src/components/inputs/file/images/squared/index.scss
@@ -82,7 +82,8 @@ $slot-dimension: 200px;
       border-radius: 0.5em;
       position: absolute;
       overflow: scroll;
-      overflow: -moz-scrollbars-none;  // Firefox
+      // overflow: -moz-scrollbars-none;  // No longer works in Firefox
+      // Unable to find a way to hide scrollbars for inner content for Mozilla Firefox
       -ms-overflow-style: none;  // IE 10+
       height: 100%;
       top: 0;
